--- a/WorldTrotter/Base.lproj/Main.storyboard
+++ b/WorldTrotter/Base.lproj/Main.storyboard
@@ -3,13 +3,12 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Conversion View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="WorldTrotter" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ConversionViewController" customModule="WorldTrotter" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -18,32 +17,26 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="212" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="deE-Wx-R76">
-                                <rect key="frame" x="245" y="8" width="111" height="84"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="70"/>
-                                <color key="textColor" red="0.88235294117647056" green="0.34509803921568627" blue="0.16078431372549018" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="degrees Fahrenheit" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="raj-dy-kxL">
-                                <rect key="frame" x="147" y="100" width="306" height="43"/>
+                                <rect key="frame" x="147" y="120" width="306" height="43"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                 <color key="textColor" red="0.88235294117647056" green="0.34509803921568627" blue="0.16078431372549018" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="is really" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="okI-LA-qxT">
-                                <rect key="frame" x="241" y="151" width="119" height="43"/>
+                                <rect key="frame" x="241" y="171" width="119" height="43"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Qj-oo-zHz">
-                                <rect key="frame" x="241" y="202" width="117" height="84"/>
+                                <rect key="frame" x="241" y="222" width="117" height="84"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="70"/>
                                 <color key="textColor" red="0.88235294117647056" green="0.34509803921568627" blue="0.16078431372549018" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="degrees Celsius" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oVB-xh-XHo">
-                                <rect key="frame" x="173" y="294" width="254" height="43"/>
+                                <rect key="frame" x="173" y="314" width="254" height="43"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="43" id="4uS-RE-gmn"/>
                                     <constraint firstAttribute="width" constant="254" id="XPl-KU-0GU"/>
@@ -52,27 +45,43 @@
                                 <color key="textColor" red="0.88235294117647056" green="0.34509803921568627" blue="0.16078431372549018" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="value" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nSh-o6-TRg">
+                                <rect key="frame" x="175" y="28" width="250" height="84"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="250" id="0EI-AG-NOp"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="250" id="z9Q-Sf-shA"/>
+                                </constraints>
+                                <color key="textColor" red="1" green="0.34731947000000002" blue="0.038780638909999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="70"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="decimalPad"/>
+                                <connections>
+                                    <action selector="fahrenheitFieldEditingChanged:" destination="BYZ-38-t0r" eventType="editingChanged" id="rqL-le-6wr"/>
+                                </connections>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" red="0.96078431372549022" green="0.95686274509803915" blue="0.94509803921568625" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="oVB-xh-XHo" firstAttribute="top" secondItem="5Qj-oo-zHz" secondAttribute="bottom" constant="13" id="8Eq-Ac-wzz"/>
                             <constraint firstItem="oVB-xh-XHo" firstAttribute="centerX" secondItem="raj-dy-kxL" secondAttribute="centerX" id="DFc-DX-eHp"/>
                             <constraint firstItem="oVB-xh-XHo" firstAttribute="top" secondItem="5Qj-oo-zHz" secondAttribute="bottom" constant="8" id="Fwc-ev-Z8R"/>
-                            <constraint firstItem="deE-Wx-R76" firstAttribute="centerX" secondItem="raj-dy-kxL" secondAttribute="centerX" id="GUx-V0-jOH"/>
                             <constraint firstItem="5Qj-oo-zHz" firstAttribute="centerX" secondItem="raj-dy-kxL" secondAttribute="centerX" id="GjO-J2-vMh"/>
-                            <constraint firstItem="deE-Wx-R76" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="8" id="LY6-iM-KXY"/>
-                            <constraint firstItem="deE-Wx-R76" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="8" id="PAs-2g-Lvk"/>
                             <constraint firstItem="okI-LA-qxT" firstAttribute="top" secondItem="raj-dy-kxL" secondAttribute="bottom" constant="8" id="PJT-xj-eVw"/>
                             <constraint firstItem="oVB-xh-XHo" firstAttribute="top" secondItem="5Qj-oo-zHz" secondAttribute="bottom" constant="8" id="SKa-GO-12Q"/>
-                            <constraint firstItem="raj-dy-kxL" firstAttribute="top" secondItem="deE-Wx-R76" secondAttribute="bottom" constant="8" id="aVM-oL-qmz"/>
-                            <constraint firstItem="deE-Wx-R76" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="dBs-Tz-T4X"/>
+                            <constraint firstItem="nSh-o6-TRg" firstAttribute="centerX" secondItem="raj-dy-kxL" secondAttribute="centerX" id="YIN-6l-LeA"/>
+                            <constraint firstItem="raj-dy-kxL" firstAttribute="top" secondItem="nSh-o6-TRg" secondAttribute="bottom" constant="37" id="YsV-8O-ScH"/>
+                            <constraint firstItem="nSh-o6-TRg" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="dRc-FX-85s"/>
                             <constraint firstItem="5Qj-oo-zHz" firstAttribute="top" secondItem="okI-LA-qxT" secondAttribute="bottom" constant="8" id="eND-md-GLY"/>
+                            <constraint firstItem="nSh-o6-TRg" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="fxZ-S3-Hyc"/>
                             <constraint firstItem="okI-LA-qxT" firstAttribute="top" secondItem="raj-dy-kxL" secondAttribute="bottom" constant="8" id="hDR-0U-cXc"/>
+                            <constraint firstItem="nSh-o6-TRg" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="spZ-1H-cGF"/>
+                            <constraint firstItem="raj-dy-kxL" firstAttribute="top" secondItem="nSh-o6-TRg" secondAttribute="bottom" constant="8" id="ugp-5p-PuU"/>
                             <constraint firstItem="okI-LA-qxT" firstAttribute="centerX" secondItem="raj-dy-kxL" secondAttribute="centerX" id="vBo-3f-hpc"/>
-                            <constraint firstItem="raj-dy-kxL" firstAttribute="top" secondItem="deE-Wx-R76" secondAttribute="bottom" constant="8" id="wiX-Sn-Zfj"/>
                             <constraint firstItem="5Qj-oo-zHz" firstAttribute="top" secondItem="okI-LA-qxT" secondAttribute="bottom" constant="8" id="wob-2D-sC5"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="celsiusLabel" destination="5Qj-oo-zHz" id="eVf-7w-ImG"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
