--- a/WorldTrotter/Base.lproj/Main.storyboard
+++ b/WorldTrotter/Base.lproj/Main.storyboard
@@ -57,6 +57,7 @@
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="decimalPad"/>
                                 <connections>
                                     <action selector="fahrenheitFieldEditingChanged:" destination="BYZ-38-t0r" eventType="editingChanged" id="rqL-le-6wr"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Axu-Kf-ydx"/>
                                 </connections>
                             </textField>
                         </subviews>
