--- a/WorldTrotter/Base.lproj/Main.storyboard
+++ b/WorldTrotter/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Z7s-UP-btq">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="FOE-op-5iK">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <scenes>
-        <!--Conversion View Controller-->
+        <!--Convert-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ConversionViewController" customModule="WorldTrotter" customModuleProvider="target" sceneMemberID="viewController">
@@ -88,6 +88,7 @@
                             <outletCollection property="gestureRecognizers" destination="ist-y6-p6E" appends="YES" id="hUw-mY-dfH"/>
                         </connections>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Convert" image="ConvertIcon" id="Y0A-bQ-nm7"/>
                     <connections>
                         <outlet property="celsiusLabel" destination="5Qj-oo-zHz" id="eVf-7w-ImG"/>
                         <outlet property="textField" destination="nSh-o6-TRg" id="cs6-TX-JJl"/>
@@ -101,7 +102,7 @@
                 </tapGestureRecognizer>
             </objects>
         </scene>
-        <!--View Controller-->
+        <!--Map-->
         <scene sceneID="mhX-hO-cU6">
             <objects>
                 <viewController id="Z7s-UP-btq" sceneMemberID="viewController">
@@ -109,10 +110,33 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     </mapView>
+                    <tabBarItem key="tabBarItem" title="Map" image="MapIcon" id="4jA-Ir-E5M"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="979-T0-mPh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1804" y="317"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="efV-vh-6ui">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="FOE-op-5iK" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="BE7-bl-W8f">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="5y8-VX-ncd"/>
+                        <segue destination="Z7s-UP-btq" kind="relationship" relationship="viewControllers" id="ObT-21-KwL"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gii-qL-GKO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="992" y="317"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="ConvertIcon" width="49" height="33"/>
+        <image name="MapIcon" width="49" height="33"/>
+    </resources>
 </document>
